# inferus

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/inferus-cli/: Cargo.toml
crates/inferus-cli/src/: main.rs
crates/inferus-format/: Cargo.toml  README.md
crates/inferus-format/src/: lib.rs
crates/inferus-lint/: README.md
crates/inferus-parser/: Cargo.toml  README.md
crates/inferus-parser/src/: lexer.rs  lib.rs  parser.rs  syntax.rs
crates/inferus-parser/src/ast/: heading.rs  mod.rs  paragraph.rs
