[workspace]
resolver = "3"
members = ["crates/inferus-cli", "crates/inferus-format", "crates/inferus-parser"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Yuta <yuta256dev@gmail.com>"]
repository = "https://github.com/yutadev31/inferus.git"

[workspace.dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
rowan = "0.16.1"
inferus-format.path ="crates/inferus-format"
inferus-parser.path ="crates/inferus-parser"
